--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>devops</groupId>
-  <artifactId>suneel</artifactId>
+  <artifactId>rohit</artifactId>
   <version>5.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -29,7 +29,7 @@
   </dependencies>
 
   <build>
-    <finalName>suneel</finalName>
+    <finalName>rohit</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
